// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Move.vue renders a black move 1`] = `
<a
  class="move move--black"
  href="#"
/>
`;

exports[`Move.vue renders a white move 1`] = `
<a
  class="move move--white"
  href="#"
/>
`;
